<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color_start"
    android:orientation="vertical"
    android:paddingHorizontal="20dp"
    android:paddingVertical="10dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="2dp"
        android:text="@string/helper_description1" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="2dp"
        android:text="@string/helper_description2" />

    <View
        style="@style/divider"
        android:layout_marginVertical="10dp"
        app:layout_constraintBottom_toTopOf="@+id/five_letter_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:text="@string/helper_description3"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            style="@style/boxStyle"
            android:text="9" />

        <TextView
            style="@style/boxStyle"
            android:text="1" />

        <TextView
            style="@style/boxStyle"
            android:text="6" />

        <TextView
            style="@style/boxStyle"
            android:text="7" />

        <com.kolip.numberle.ResultView
            android:id="@+id/helper_row_1_result"
            android:layout_width="30dp"
            android:layout_height="40dp"
            android:layout_marginHorizontal="10dp" />

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="10dp"
        android:text="@string/helper_description4" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            style="@style/boxStyle"
            android:text="1" />

        <TextView
            style="@style/boxStyle"
            android:text="5" />

        <TextView
            style="@style/boxStyle"
            android:text="6" />

        <TextView
            style="@style/boxStyle"
            android:text="7" />

        <com.kolip.numberle.ResultView
            android:id="@+id/helper_row_2_result"
            android:layout_width="30dp"
            android:layout_height="40dp"
            android:layout_marginHorizontal="10dp" />

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="10dp"
        android:text="@string/helper_description5" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            style="@style/boxStyle"
            android:text="1" />

        <TextView
            style="@style/boxStyle"
            android:text="9" />

        <TextView
            style="@style/boxStyle"
            android:text="8" />

        <TextView
            style="@style/boxStyle"
            android:text="2" />

        <com.kolip.numberle.ResultView
            android:id="@+id/helper_row_3_result"
            android:layout_width="30dp"
            android:layout_height="40dp"
            android:layout_marginHorizontal="10dp" />

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="10dp"
        android:text="@string/helper_description7" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            style="@style/boxStyle"
            android:text="1" />

        <TextView
            style="@style/boxStyle"
            android:text="2" />

        <TextView
            style="@style/boxStyle"
            android:text="3" />

        <TextView
            style="@style/boxStyle"
            android:text="4" />

        <com.kolip.numberle.ResultView
            android:id="@+id/helper_row_4_result"
            android:layout_width="30dp"
            android:layout_height="40dp"
            android:layout_marginHorizontal="10dp" />

    </LinearLayout>


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="10dp"
        android:text="@string/helper_description6" />

    <View
        style="@style/divider"
        android:layout_marginVertical="10dp"
        app:layout_constraintBottom_toTopOf="@+id/five_letter_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2"
        app:layout_constraintVertical_bias="0.0" />


</LinearLayout>